Added jwt authentication

--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -1,6 +1,6 @@
 
 body{
-    background-image: url("https://wallpaperaccess.com/full/984377.jpg");
+   /* background-image: url("https://wallpaperaccess.com/full/984377.jpg");*/
     
     background-position: center top;
     background-size: 100% auto;
