--- a/client/src/components/stylingfolder/TimesSquare.css
+++ b/client/src/components/stylingfolder/TimesSquare.css
@@ -1,4 +1,4 @@
-.video-container {
+/* .video-container {
     background-size: cover;
     height: 100vh;
     width: 100vw;
@@ -6,15 +6,15 @@
   }
   
   .video-container video {
-    /* Make video to at least 100% wide and tall */
+    Make video to at least 100% wide and tall
     min-width: 100%; 
     min-height: 100%; 
     
-    /* Setting width & height to auto prevents the browser from stretching or squishing the video */
+    Setting width & height to auto prevents the browser from stretching or squishing the video
     width: auto;
     height: auto;
     
-    /* Center the video */
+    Center the video
     position: absolute;
     top: 50%;
     left: 50%;
@@ -39,4 +39,4 @@
   color: white;
   font-family: sans-serif;
   top: 45vh;
-}
+} */
