--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,11 +37,10 @@
   }
 }
 
-.video-container {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%; 
-  overflow: hidden;
+body{
+  background-image: url("https://wallpaperaccess.com/full/984377.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  overflow-x: hidden;  
 }
