--- a/client/src/components/stylingfolder/Login.css
+++ b/client/src/components/stylingfolder/Login.css
@@ -79,6 +79,23 @@
   text-align: center;
   border-radius: 2%;
 }
+.overlay10 {
+  background: rgb(255, 255, 255,0.5);
+  position: absolute;
+  height: 92%;
+  left: 0;
+  right: 0;
+  width: 30%;
+  max-width: 45em;
+  margin: auto auto 1em;
+  margin-top: 5%;
+  margin-top: 2%;
+  box-sizing: border-box;
+  padding: 2em;
+  line-height: 1.5;
+  text-align: center;
+  border-radius: 2%;
+}
 
 .loginheadings{
   color:rgb(93, 90, 90);
